--- a/lib/IO/Socket/DDP.pod
+++ b/lib/IO/Socket/DDP.pod
@@ -111,7 +111,7 @@ L<Net::Atalk>, L<IO::Socket>
 
 =head1 AUTHOR
 
-Derrik Pates <demon@devrandom.net>, based on code written by Graham
+Derrik Pates <demon@now.ai>, based on code written by Graham
 Barr and maintained by the Perl Porters.
 
 =cut
