--- a/lib/Net/Atalk/NBP.pod
+++ b/lib/Net/Atalk/NBP.pod
@@ -40,4 +40,8 @@ for development (see L<http://netatalk.sourceforge.net/>).
 
 L<Net::Atalk>, L<IO::Socket::DDP>
 
+=head1 AUTHOR
+
+Derrik Pates <demon@now.ai>
+
 =cut
