--- a/lib/Net/Atalk/ZIP.pod
+++ b/lib/Net/Atalk/ZIP.pod
@@ -62,4 +62,8 @@ for development (see L<http://netatalk.sourceforge.net/>).
 
 L<Net::Atalk>, L<IO::Socket::DDP>
 
+=head1 AUTHOR
+
+Derrik Pates <demon@now.ai>
+
 =cut
